OZON-143 Fix order on mobile version

--- a/ozon/src/views/ProductView/ProductView.scss
+++ b/ozon/src/views/ProductView/ProductView.scss
@@ -219,6 +219,18 @@
         width: 100%;
         height: 75%;
     }
+
+    .aboutProduct {
+        order: 0;
+    }
+
+    .reviewMenu {
+        order: 1;
+    }
+
+    .buyMenu {
+        order: 2;
+    }
 }
 
 @media screen and (max-width: $max-width-xl) {
